--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Friend Location Meetup</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=" + %REACT_APP_GOOGLE_MAPS_API%></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API%"></script>
   </head>
   <body class="text-blueGray-700 antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
